plugins {
    id "com.vanniktech.maven.publish" version "0.34.0"
}

group = 'io.seats'
version = '89.0.0'

apply plugin: 'java'
sourceCompatibility = 17

repositories {
    mavenCentral()
}

mavenPublishing {
    publishToMavenCentral(true)
    signAllPublications()

    pom {
        name = "seatsio-java"
        description = "The official seats.io Java client library"
        url = "https://github.com/seatsio/seatsio-java"
        licenses {
            license {
                name = "MIT"
                url = "https://github.com/seatsio/seatsio-java/blob/master/LICENSE"
                distribution = "repo"
            }
        }
        developers {
            developer {
                id = "mroloux"
                name = "Matti Roloux"
                url = "https://github.com/mroloux/"
            }
            developer {
                id = "bverbeken"
                name = "Ben Verbeken"
                url = "https://github.com/bverbeken"
            }
        }
        scm {
            url = "https://github.com/seatsio/seatsio-java/"
            connection = "scm:git:git://github.com/seatsio/seatsio-java.git"
            developerConnection = "scm:git:ssh://git@github.com/seatsio/seatsio-java.git"
        }
    }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.19.0'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'com.konghq:unirest-java:3.14.5'
    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.27.6'
    testImplementation 'commons-io:commons-io:2.20.0'
    testImplementation 'org.awaitility:awaitility:4.3.0'
    testRuntimeOnly "org.slf4j:slf4j-api:2.0.17"
}

test {
    useJUnitPlatform()
    testLogging {
        events 'started', 'passed', 'failed', 'skipped'
        exceptionFormat = 'full'
    }
}
